temp dark mode fix

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
+  /* :root {
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
 
@@ -33,9 +33,9 @@
     --ring: 240 10% 3.9%;
 
     --radius: 0.5rem;
-  }
+  } */
 
-  .dark {
+  :root {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
 
